packages/compiler-rs/tests/snapshots/transform_element__component_dynamic_props_after_static_prop.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Foo, {
    id: () => "foo",
    $: [() => obj]
  }, null, true);
  return n0;
})();
