packages/compiler-rs/tests/snapshots/transform_element__component_dynamic_props_between_static_prop.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Foo, {
    id: () => "foo",
    $: [() => obj, { class: () => "bar" }]
  }, null, true);
  return n0;
})();
