packages/compiler-rs/tests/snapshots/transform_element__component_fragment_should_not_mark_as_single_root.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Comp);
  return n0;
})();
