packages/compiler-rs/tests/snapshots/transform_element__component_generate_multi_root_component.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
import { template as _template } from "vue";
const t0 = _template("123");
(() => {
  const n0 = _createComponent(Comp);
  const n1 = t0();
  return [n0, n1];
})();
