packages/compiler-rs/tests/snapshots/transform_element__component_generate_single_root_component.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Comp, null, null, true);
  return n0;
})();
