packages/compiler-rs/tests/snapshots/transform_element__component_props_merging_class.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Foo, { class: () => ["foo", { bar: isBar }] }, null, true);
  return n0;
})();
