packages/compiler-rs/tests/snapshots/transform_element__component_props_merging_style.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Foo, { style: () => ["color: green", { color: "red" }] }, null, true);
  return n0;
})();
