packages/compiler-rs/tests/snapshots/transform_element__component_static_props.snap
---
source: tests/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Foo, {
    id: () => "foo",
    class: () => "bar"
  }, null, true);
  return n0;
})();
